button layout issue fixed

--- a/publisher-web/app/assets/stylesheets/layout.less
+++ b/publisher-web/app/assets/stylesheets/layout.less
@@ -270,6 +270,7 @@ footer {
 		background-color: red;
 	}
 	
-.gp-btn-group-bottom {
-	padding-top: 5px;
+.gp-btn-spacer {
+	width: 100%;
+	height: 5px;
 }
